@@ -2,6 +2,8 @@ Changes relative to tre-0.18:
   * PERMUTATE: Takes &REST argument instead of list of lists.
   * DEFINE-SLOT-SETTER*: Weird idea removed.
   * DEFINE-GENSYM-GENERATOR -> DEF-GENSYM.
+  * CL: NANOTIME replaced by MILLISECONDS-SINCE-1970, albeit
+    with precision of seconds only.
 
 Changes of tre-0.18 relative to tre-0.17:
   * Slightly improved optimizer.
